add_executable(depicter_read_loadable)
set_target_properties(depicter_read_loadable PROPERTIES OUTPUT_NAME "depicter_read_loadable")
target_sources(depicter_read_loadable PRIVATE 0.loadable.read.cpp)

add_executable(depicter_read_version)
set_target_properties(depicter_read_version PROPERTIES OUTPUT_NAME "depicter_read_version")
target_link_libraries(depicter_read_version ${PROJECT_NAME})
target_sources(depicter_read_version PRIVATE 1.loadable.version.cpp)

add_executable(depicter_read_task_list)
set_target_properties(depicter_read_task_list PROPERTIES OUTPUT_NAME "depicter_read_task_list")
target_link_libraries(depicter_read_task_list ${PROJECT_NAME})
target_sources(depicter_read_task_list PRIVATE 2.loadable.task_list.cpp)

add_executable(depicter_read_memory_list)
set_target_properties(depicter_read_memory_list PROPERTIES OUTPUT_NAME "depicter_read_memory_list")
target_link_libraries(depicter_read_memory_list ${PROJECT_NAME})
target_sources(depicter_read_memory_list PRIVATE 3.loadable.memory_list.cpp)
